// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation doesn't toggle items without children 1`] = `
<nav
  class="navigation-class-name"
>
  <ul>
    <li
      class="active-class-name with-children-class-name"
      id="/path/1"
    >
      <a
        href="/path/1"
      >
        Title 1
      </a>
      <ul>
        <li
          class="active-class-name with-children-class-name"
          id="/path/2"
        >
          <a
            href="/path/2"
          >
            Title 2
          </a>
          <ul>
            <li
              class="active-class-name with-children-class-name"
              id="/path/3"
            >
              <a
                href="/path/3"
              >
                Title 3
              </a>
              <ul>
                <li
                  class="with-children-class-name"
                  id="/path/4"
                >
                  <a
                    href="/path/4"
                  >
                    Title 4
                  </a>
                  <ul>
                    <li
                      class=""
                      id="/path/5"
                    >
                      <a
                        href="/path/5"
                      >
                        Title 5
                      </a>
                    </li>
                    <li
                      class=""
                      id="/path/6"
                    >
                      <a
                        href="/path/6"
                      >
                        Title 6
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="with-children-class-name"
      id="/path/7"
    >
      <a
        href="/path/7"
      >
        Title 7
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/8"
        >
          <a
            href="/path/8"
          >
            Title 8
          </a>
          <ul>
            <li
              class=""
              id="/path/9"
            >
              <a
                href="/path/9"
              >
                Title 9
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Navigation renders correctly by default 1`] = `
<nav
  class="navigation-class-name"
>
  <ul>
    <li
      class="active-class-name "
      id="/path/1"
    >
      <a
        href="/path/1"
      >
        Title 1
      </a>
      <ul>
        <li
          class="active-class-name "
          id="/path/2"
        >
          <a
            href="/path/2"
          >
            Title 2
          </a>
          <ul>
            <li
              class="active-class-name "
              id="/path/3"
            >
              <a
                href="/path/3"
              >
                Title 3
              </a>
              <ul>
                <li
                  class="active-class-name "
                  id="/path/4"
                >
                  <a
                    href="/path/4"
                  >
                    Title 4
                  </a>
                  <ul>
                    <li
                      class=""
                      id="/path/5"
                    >
                      <a
                        href="/path/5"
                      >
                        Title 5
                      </a>
                    </li>
                    <li
                      class=""
                      id="/path/6"
                    >
                      <a
                        href="/path/6"
                      >
                        Title 6
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class=""
      id="/path/7"
    >
      <a
        href="/path/7"
      >
        Title 7
      </a>
      <ul>
        <li
          class=""
          id="/path/8"
        >
          <a
            href="/path/8"
          >
            Title 8
          </a>
          <ul>
            <li
              class=""
              id="/path/9"
            >
              <a
                href="/path/9"
              >
                Title 9
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Navigation renders correctly with all props 1`] = `
<nav
  class="navigation-class-name"
>
  <ul>
    <li
      class="active-class-name with-children-class-name"
      id="/path/1"
    >
      <a
        href="/path/1"
      >
        Title 1
      </a>
      <ul>
        <li
          class="active-class-name with-children-class-name"
          id="/path/2"
        >
          <a
            href="/path/2"
          >
            Title 2
          </a>
          <ul>
            <li
              class="active-class-name with-children-class-name"
              id="/path/3"
            >
              <a
                href="/path/3"
              >
                Title 3
              </a>
              <ul>
                <li
                  class="active-class-name with-children-class-name"
                  id="/path/4"
                >
                  <a
                    href="/path/4"
                  >
                    Title 4
                  </a>
                  <ul>
                    <li
                      class=""
                      id="/path/5"
                    >
                      <a
                        href="/path/5"
                      >
                        Title 5
                      </a>
                    </li>
                    <li
                      class=""
                      id="/path/6"
                    >
                      <a
                        href="/path/6"
                      >
                        Title 6
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="with-children-class-name"
      id="/path/7"
    >
      <a
        href="/path/7"
      >
        Title 7
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/8"
        >
          <a
            href="/path/8"
          >
            Title 8
          </a>
          <ul>
            <li
              class=""
              id="/path/9"
            >
              <a
                href="/path/9"
              >
                Title 9
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Navigation toggles items correctly 1`] = `
<nav
  class="navigation-class-name"
>
  <ul>
    <li
      class="active-class-name with-children-class-name"
      id="/path/1"
    >
      <a
        href="/path/1"
      >
        Title 1
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/2"
        >
          <a
            href="/path/2"
          >
            Title 2
          </a>
          <ul>
            <li
              class="active-class-name with-children-class-name"
              id="/path/3"
            >
              <a
                href="/path/3"
              >
                Title 3
              </a>
              <ul>
                <li
                  class="active-class-name with-children-class-name"
                  id="/path/4"
                >
                  <a
                    href="/path/4"
                  >
                    Title 4
                  </a>
                  <ul>
                    <li
                      class=""
                      id="/path/5"
                    >
                      <a
                        href="/path/5"
                      >
                        Title 5
                      </a>
                    </li>
                    <li
                      class=""
                      id="/path/6"
                    >
                      <a
                        href="/path/6"
                      >
                        Title 6
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="with-children-class-name"
      id="/path/7"
    >
      <a
        href="/path/7"
      >
        Title 7
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/8"
        >
          <a
            href="/path/8"
          >
            Title 8
          </a>
          <ul>
            <li
              class=""
              id="/path/9"
            >
              <a
                href="/path/9"
              >
                Title 9
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Navigation toggles items correctly 2`] = `
<nav
  class="navigation-class-name"
>
  <ul>
    <li
      class="with-children-class-name"
      id="/path/1"
    >
      <a
        href="/path/1"
      >
        Title 1
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/2"
        >
          <a
            href="/path/2"
          >
            Title 2
          </a>
          <ul>
            <li
              class="active-class-name with-children-class-name"
              id="/path/3"
            >
              <a
                href="/path/3"
              >
                Title 3
              </a>
              <ul>
                <li
                  class="active-class-name with-children-class-name"
                  id="/path/4"
                >
                  <a
                    href="/path/4"
                  >
                    Title 4
                  </a>
                  <ul>
                    <li
                      class=""
                      id="/path/5"
                    >
                      <a
                        href="/path/5"
                      >
                        Title 5
                      </a>
                    </li>
                    <li
                      class=""
                      id="/path/6"
                    >
                      <a
                        href="/path/6"
                      >
                        Title 6
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="with-children-class-name"
      id="/path/7"
    >
      <a
        href="/path/7"
      >
        Title 7
      </a>
      <ul>
        <li
          class="with-children-class-name"
          id="/path/8"
        >
          <a
            href="/path/8"
          >
            Title 8
          </a>
          <ul>
            <li
              class=""
              id="/path/9"
            >
              <a
                href="/path/9"
              >
                Title 9
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;
